@@ -19,6 +19,7 @@ Version 1.0.4
 * Fix several pushable sound and object collision bugs.
 * Fix original bug with incorrect climb up behaviour on ladders under sloped ceilings.
 * Fix TR1 centaur bubble targeting.
+* Fix occasional wrong rollingball collision in narrow pits.
 * Fix classic rollingball and big rollingball not behaving properly.
 * Fix caustics not turning off in display settings.
 * Fix windowed mode not using real resolution when DPI scaling is active.
